[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
lazy_static = "1.4.0"
regex = "1.10.2"
log = "0.4.20"
itertools = "0.12.0"
